--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://i.ibb.co/Fq5jbwpG/Chat-GPT-Image-Oct-20-2025-11-45-20-AM.png" />
+    <link rel="apple-touch-icon" href="https://i.ibb.co/Fq5jbwpG/Chat-GPT-Image-Oct-20-2025-11-45-20-AM.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T-Mobile Quote App</title>
   </head>
